<resources>
    <string name="app_name">Delfos Machine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Cadastrar</string>
    <string name="login">Entrar</string>
    <string name="back">Voltar</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="name">Nome</string>
    <string name="welcome_message">Bem-vindo, %1$s!</string>
    <string name="user">usuário</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="save">Salvar</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="text_lembrar">Lembrar-se de mim</string>
    <string name="text_esqueci_senha">Esqueci minha senha</string>
    <string name="button_acessar">Acessar</string>
    <string name="texto_banner">Precisa de ajuda?\nEntre em contato\ncom a gente!</string>
    <string name="button_formulario">Preencher Formulário</string>
    <string name="text_erro_login">Não foi possível fazer login</string>
    <string name="erro_no_login">Erro no login</string>
    <string name="erro_na_comunicacao">Erro na comunicação</string>
    <string name="e_mail_e_senha_obrigatorios">E-mail e senha são obrigatórios</string>
    <string name="digite_sua_data_de_nascimento">Data de nascimento YYYY-MM-DD</string>
    <string name="validar">Validar</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirme_senha">Confirme sua senha\n</string>
    <string name="button_enviar">Enviar</string>
    <string name="instrucoes_senha"><![CDATA[Para sua segurança, por favor, crie uma nova senha seguindo as diretrizes abaixo:\n\nDeve conter no mínimo 8 caracteres\nPelo menos uma letra maiúscula (A-Z)\nPelo menos uma letra minúscula (a-z)\nPelo menos um número (0-9)\nPelo menos um caractere especial (!@#$%^&*)]]></string>
    <string name="logo">logo</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="texto_esqueci_minha_senha">Precisamos validar alguns dados, por favor\npreencha os campos abaixo:</string>
    <string name="button_rec_senha">Recuperar Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tem_acesso">Não tem acesso? Faça agora mesmo:</string>
    <string name="fazer_cadastro">Fazer Cadastro</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cuide_da_saude">Cuide da saúde\nde quem você\nama.</string>
    <string name="cuide_da_saude_desc">Conte com uma rede de cobertura\n completa, preços que cabem no seu bolso\n e o melhor: você monta o plano que é \nideal para o seu momento.</string>
    <string name="simule_seu_plano">Simule seu plano</string>
    <string name="falha_no_login">Falha no login</string>
    <string name="erro_no_servidor">Erro no servidor</string>
    <string name="credenciais_invalidas">Credenciais inválidas</string>
    <string name="pagina_implementada">Esta página será implementada\nnas próximas Sprints</string>
    <string name="iniciar_cadastro">Vamos iniciar o seu cadastro?</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="hint_nome">Ex: João</string>
    <string name="hint_sobrenome">Ex: Silva</string>
    <string name="hint_data">Ex: (YYYY-MM-DD)</string>
    <string name="data">Data de Nascimento</string>
    <string name="hint_telefone">Ex: (11) 99999–9999</string>
    <string name="continuar">Continuar</string>
    <string name="telefone">Telefone</string>
    <string name="formulario">Formulário</string>
    <string name="descricao_formulario">Preencha o formulário abaixo para entrarmos em contato o mais breve o possível.</string>
    <string name="mensagem">Digite sua mensagem...</string>
    <string name="enviar">Enviar</string>
</resources>
