<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.fiap.challenge.RegisterFragment">

    <!-- Botão de Voltar -->
    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/back_to_branco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/logo_odontoprev_azul"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/iniciar_cadastro"
        android:textColor="#003EA6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Nome -->
    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="24dp"
        android:textColor="#003EA6"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/nome"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/tv_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sobrenome -->
    <TextView
        android:id="@+id/tv_sobrenome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="#003EA6"
        android:paddingStart="24dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/sobrenome"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_sobrenome"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/noto_sans_medium"
        android:hint="@string/hint_sobrenome"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/tv_sobrenome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- E-mail -->
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#003EA6"
        android:paddingStart="24dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_sobrenome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Telefone -->
    <TextView
        android:id="@+id/tv_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/telefone"
        android:paddingStart="24dp"
        android:fontFamily="@font/noto_sans_medium"
        android:textColor="#003EA6"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_telefone"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/hint_telefone"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/tv_telefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Data de Nascimento -->
    <TextView
        android:id="@+id/tv_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#003EA6"
        android:paddingStart="24dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/data"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/et_telefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_data_nascimento"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/hint_data"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/tv_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botão Continuar -->
    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:backgroundTint="#0066ff"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/continuar"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_data_nascimento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
