<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.fiap.challenge.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="#FFFFFF">

        <!-- Botão de Voltar -->
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="31dp"
            app:srcCompat="@drawable/back_to_branco"
            android:contentDescription="@string/back" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/logo_odontoprev_azul"
            android:contentDescription="@string/logo" />

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/nova_senha"
            android:textColor="#003EA6"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Instruções -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrucoes_senha"
            android:textSize="14sp"
            android:layout_marginTop="16dp" />

        <!-- Campo Nova Senha -->
        <EditText
            android:id="@+id/etNovaSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/nova_senha"
            android:inputType="textPassword" />

        <!-- Campo Confirmar Senha -->
        <EditText
            android:id="@+id/etConfirmeSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/confirme_senha"
            android:inputType="textPassword" />

        <!-- Botão Enviar -->
        <Button
            android:id="@+id/bt_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/noto_sans_medium"
            android:text="@string/button_enviar"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:textStyle="bold"
            android:backgroundTint="#0066ff" />

    </LinearLayout>

</FrameLayout>
