<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.fiap.challenge.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="#FFFFFF">

        <!-- Botão de Voltar -->
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="31dp"
            app:srcCompat="@drawable/back_to" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo" />

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/esqueci_minha_senha"
            android:textColor="#003EA6"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Instruções -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/texto_esqueci_minha_senha"
            android:textAlignment="center"
            android:textSize="16sp" />

        <!-- Campo E-mail -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:height="48dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/digite_seu_e_mail"
            android:inputType="text|textEmailAddress"
            android:paddingStart="16dp" />

        <!-- Campo Data de nascimeto -->
        <EditText
            android:id="@+id/etDataNasc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/digite_sua_data_de_nascimento"
            android:inputType="datetime|date"
            android:paddingStart="16dp" />

        <!-- Botão Enviar -->
        <Button
            android:id="@+id/btnRecuperarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/noto_sans_medium"
            android:text="@string/button_rec_senha"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:textStyle="bold"
            android:backgroundTint="#0066ff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>