<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.fiap.challenge.MainFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="br.com.fiap.challenge.MainFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <!-- Logo -->
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <!-- Carrossel de Imagens -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:background="@drawable/rounded_background"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="24dp" />

            <!-- Indicador do Carrossel -->
            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />

            <!-- Botão Entrar -->
            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_background"
                android:backgroundTint="#90BE42"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/entrar"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <!-- Texto Não Tem Acesso -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/nao_tem_acesso"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <!-- Botão Fazer Cadastro -->
            <Button
                android:id="@+id/btnPrimeiroAcesso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_outline_rounded"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/fazer_cadastro"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
